4.0.0 refactor apis, check contract
