# src/main/java/tech/bananaz/spring/models/Listings.java
@@ -43,10 +43,6 @@ public class Listings {
 	private Boolean isSlug;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean solanaOnOpensea;
-	@Column(columnDefinition="BIGINT UNSIGNED DEFAULT 0")
-	private Long    lastLooksId;
-	@Column(columnDefinition="BIGINT UNSIGNED DEFAULT 0")
-	private Long    lastOpenseaId;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 1")
 	private Boolean active;
 
