# src/main/java/tech/bananaz/spring/utils/EventType.java
@@ -1,0 +1,8 @@
+package tech.bananaz.spring.utils;
+
+public enum EventType {
+	LISTING,
+	SALE,
+	MINT,
+	BURN
+}
